# easyNginx2

./: Cargo.toml  LICENSE  build.rs
src/: main.rs
src/core/: language.rs  mod.rs
src/model/: mod.rs
src/model/l18n/: mod.rs
src/model/ui/: main_window.rs  mod.rs
src/models/: mod.rs  nginx_status.rs  site.rs
src/ui/: main_window.rs  mod.rs  site_list.rs
src/ui/dialogs/: mod.rs
