[package]
name = "easy_nginx"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
