[package]
name = "easnginx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.73"
inventory = "0.1.3"
eframe = "0.26.0"
winit = "0.29.15"

[target.'cfg(windows)'.dependencies]
windows = "0.51.1"


